<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Section Langue et Voix -->
    <PreferenceCategory android:title="@string/language_settings">
        
        <ListPreference
            android:key="app_language"
            android:title="@string/app_language"
            android:summary="@string/select_app_language"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_values"
            android:defaultValue="system" />
            
        <SwitchPreference
            android:key="voice_feedback"
            android:title="@string/voice_feedback"
            android:summary="@string/voice_feedback_summary"
            android:defaultValue="true" />
            
        <SeekBarPreference
            android:key="voice_speed"
            android:title="@string/voice_speed"
            android:summary="@string/voice_speed_summary"
            android:defaultValue="100"
            android:max="200"
            android:min="50" />
    </PreferenceCategory>

    <!-- Section Reconnaissance Vocale -->
    <PreferenceCategory android:title="@string/speech_recognition">
        
        <EditTextPreference
            android:key="activation_keyword"
            android:title="@string/activation_keyword"
            android:summary="@string/activation_keyword_summary"
            android:defaultValue="magic"
            android:dialogTitle="Mot d'activation" />
            
        <SeekBarPreference
            android:key="sensitivity"
            android:title="@string/sensitivity"
            android:summary="@string/sensitivity_summary"
            android:defaultValue="75"
            android:max="100"
            android:min="25" />
            
        <Preference
            android:key="download_languages"
            android:title="@string/download_languages"
            android:summary="@string/download_languages_summary" />
            
        <EditTextPreference
            android:key="custom_download"
            android:title="@string/custom_download"
            android:summary="@string/custom_download_summary"
            android:dialogTitle="URL de téléchargement" />
    </PreferenceCategory>

    <!-- Section Contrôle Appareil -->
    <PreferenceCategory android:title="@string/device_control">
        
        <SwitchPreference
            android:key="find_phone"
            android:title="@string/find_phone"
            android:summary="@string/find_phone_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <!-- Section Paramètres Avancés -->
    <PreferenceCategory android:title="@string/advanced_settings">
        
        <SwitchPreference
            android:key="wifi_control"
            android:title="@string/wifi_control"
            android:defaultValue="true" />
            
        <SwitchPreference
            android:key="bluetooth_control"
            android:title="@string/bluetooth_control"
            android:defaultValue="true" />
            
        <SwitchPreference
            android:key="auto_download"
            android:title="@string/auto_download"
            android:summary="@string/auto_download_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
